; ModuleID = '/home/carl/AnghaBench/linux/drivers/leds/extr_leds-lp5523.c_lp5523_load_engine_and_select_page.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/leds/extr_leds-lp5523.c_lp5523_load_engine_and_select_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lp55xx_chip = type { i32 }

@lp5523_load_engine_and_select_page.page_sel = internal constant [131 x i32] [i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 131, i32 132, i32 133], align 16
@LP5523_REG_PROG_PAGE_SEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lp55xx_chip*)* @lp5523_load_engine_and_select_page to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lp5523_load_engine_and_select_page(%struct.lp55xx_chip* %0) #0 {
  %2 = alloca %struct.lp55xx_chip*, align 8
  %3 = alloca i32, align 4
  store %struct.lp55xx_chip* %0, %struct.lp55xx_chip** %2, align 8
  %4 = load %struct.lp55xx_chip*, %struct.lp55xx_chip** %2, align 8
  %5 = getelementptr inbounds %struct.lp55xx_chip, %struct.lp55xx_chip* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  store i32 %6, i32* %3, align 4
  %7 = load %struct.lp55xx_chip*, %struct.lp55xx_chip** %2, align 8
  %8 = call i32 @lp5523_load_engine(%struct.lp55xx_chip* %7)
  %9 = load %struct.lp55xx_chip*, %struct.lp55xx_chip** %2, align 8
  %10 = load i32, i32* @LP5523_REG_PROG_PAGE_SEL, align 4
  %11 = load i32, i32* %3, align 4
  %12 = zext i32 %11 to i64
  %13 = getelementptr inbounds [131 x i32], [131 x i32]* @lp5523_load_engine_and_select_page.page_sel, i64 0, i64 %12
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @lp55xx_write(%struct.lp55xx_chip* %9, i32 %10, i32 %14)
  ret void
}

declare dso_local i32 @lp5523_load_engine(%struct.lp55xx_chip*) #1

declare dso_local i32 @lp55xx_write(%struct.lp55xx_chip*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
